# ClashMetaForAndroid-OSS

./: a.txt  release.keystore
.github/workflows/: build-debug.yaml  build-pre-release.yaml  build-release.yaml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/: MainActivity.kt  ModuleDisconnectedActivity.kt
app/src/main/java/com/github/kr328/clash/remote/: Broadcasts.kt
app/src/main/java/com/github/kr328/clash/util/: ModuleConnection.kt
app/src/main/res/xml/: network_security_config.xml
design/src/main/java/com/github/kr328/clash/design/: MainDesign.kt  NetworkSettingsDesign.kt
design/src/main/java/com/github/kr328/clash/design/preference/: Value.kt
design/src/main/res/values/: strings.xml
design/src/main/res/values-zh/: strings.xml
module/mihomo/: customize.sh  module.prop
module/mihomo/zygisk/: CMakeLists.txt  README_BUILD.txt  main.cpp  zygisk.hpp
service/src/main/java/com/github/kr328/clash/service/: ClashManager.kt  ClashService.kt  TunService.kt
service/src/main/java/com/github/kr328/clash/service/clash/: ClashRuntime.kt
service/src/main/java/com/github/kr328/clash/service/clash/meta/: MetaApiClient.kt  MetaConfigPatcher.kt  MetaKernelController.kt  MetaPaths.kt  MetaState.kt  RootCmd.kt
service/src/main/java/com/github/kr328/clash/service/clash/module/: AppListCacheModule.kt  DynamicNotificationModule.kt  MetaRuntimeModule.kt  NetworkObserveModule.kt  SuspendModule.kt  TimeZoneModule.kt
service/src/main/java/com/github/kr328/clash/service/store/: ServiceStore.kt
